--- a/2D Game Engine/2D Game Engine.vcxproj
+++ b/2D Game Engine/2D Game Engine.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{36EDB50A-82E6-4F2E-8187-5A826B70D315}</ProjectGuid>
     <RootNamespace>My2DGameEngine</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -32,20 +32,20 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -97,11 +97,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>F:\Visual Studio 2017\Projects\2D Game Engine\includes;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\VS Projects\Para engine\includes;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>F:\Visual Studio 2017\Projects\2D Game Engine\libs\Debug;F:\Visual Studio 2017\Projects\2D Game Engine\libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\VS Projects\Para engine\libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glew32.lib;glew32s.lib;glfw3.lib;glfw3dll.lib;opengl32.lib;Box2D.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>CRT_SECURE_NO_WARNINGS %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -133,53 +135,53 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AudioManager.cpp" />
-    <ClCompile Include="Box.cpp" />
-    <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="Game.cpp" />
-    <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="imgui.cpp" />
-    <ClCompile Include="imgui_demo.cpp" />
-    <ClCompile Include="imgui_draw.cpp" />
-    <ClCompile Include="imgui_impl_glfw_gl3.cpp" />
-    <ClCompile Include="SceneManager.cpp" />
-    <ClCompile Include="ShaderProgram.cpp" />
-    <ClCompile Include="SoundSource.cpp" />
-    <ClCompile Include="Sprite.cpp" />
-    <ClCompile Include="stb_image.cpp" />
-    <ClCompile Include="stb_image_write.cpp" />
-    <ClCompile Include="std_truetype.cpp" />
-    <ClCompile Include="Text.cpp" />
-    <ClCompile Include="TextureLoader.cpp" />
-    <ClCompile Include="Transform.cpp" />
+    <ClCompile Include="ParaEngine\AudioManager.cpp" />
+    <ClCompile Include="ParaEngine\Box.cpp" />
+    <ClCompile Include="ParaEngine\Camera.cpp" />
+    <ClCompile Include="ParaEngine\Game.cpp" />
+    <ClCompile Include="ParaEngine\GameObject.cpp" />
+    <ClCompile Include="ParaEngine\imgui.cpp" />
+    <ClCompile Include="ParaEngine\imgui_demo.cpp" />
+    <ClCompile Include="ParaEngine\imgui_draw.cpp" />
+    <ClCompile Include="ParaEngine\imgui_impl_glfw_gl3.cpp" />
+    <ClCompile Include="ParaEngine\SceneManager.cpp" />
+    <ClCompile Include="ParaEngine\ShaderProgram.cpp" />
+    <ClCompile Include="ParaEngine\SoundSource.cpp" />
+    <ClCompile Include="ParaEngine\Sprite.cpp" />
+    <ClCompile Include="ParaEngine\stb_image.cpp" />
+    <ClCompile Include="ParaEngine\stb_image_write.cpp" />
+    <ClCompile Include="ParaEngine\std_truetype.cpp" />
+    <ClCompile Include="ParaEngine\Text.cpp" />
+    <ClCompile Include="ParaEngine\TextureLoader.cpp" />
+    <ClCompile Include="ParaEngine\Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AudioManager.h" />
-    <ClInclude Include="Box.h" />
-    <ClInclude Include="Camera.h" />
-    <ClInclude Include="Component.h" />
-    <ClInclude Include="Game.h" />
-    <ClInclude Include="GameObject.h" />
-    <ClInclude Include="imconfig.h" />
-    <ClInclude Include="imgui.h" />
-    <ClInclude Include="imgui_impl_glfw_gl3.h" />
-    <ClInclude Include="imgui_internal.h" />
-    <ClInclude Include="InputData.h" />
-    <ClInclude Include="ParaEngineError.h" />
-    <ClInclude Include="PhysicsData.h" />
-    <ClInclude Include="SceneManager.h" />
-    <ClInclude Include="ShaderProgram.h" />
-    <ClInclude Include="SoundSource.h" />
-    <ClInclude Include="Sprite.h" />
-    <ClInclude Include="stb_image.h" />
-    <ClInclude Include="stb_image_write.h" />
-    <ClInclude Include="stb_rect_pack.h" />
-    <ClInclude Include="stb_textedit.h" />
-    <ClInclude Include="stb_truetype.h" />
-    <ClInclude Include="Text.h" />
-    <ClInclude Include="Texture.h" />
-    <ClInclude Include="TextureLoader.h" />
-    <ClInclude Include="Transform.h" />
+    <ClInclude Include="ParaEngine\AudioManager.h" />
+    <ClInclude Include="ParaEngine\Box.h" />
+    <ClInclude Include="ParaEngine\Camera.h" />
+    <ClInclude Include="ParaEngine\Component.h" />
+    <ClInclude Include="ParaEngine\Game.h" />
+    <ClInclude Include="ParaEngine\GameObject.h" />
+    <ClInclude Include="ParaEngine\imconfig.h" />
+    <ClInclude Include="ParaEngine\imgui.h" />
+    <ClInclude Include="ParaEngine\imgui_impl_glfw_gl3.h" />
+    <ClInclude Include="ParaEngine\imgui_internal.h" />
+    <ClInclude Include="ParaEngine\InputData.h" />
+    <ClInclude Include="ParaEngine\ParaEngineError.h" />
+    <ClInclude Include="ParaEngine\PhysicsData.h" />
+    <ClInclude Include="ParaEngine\SceneManager.h" />
+    <ClInclude Include="ParaEngine\ShaderProgram.h" />
+    <ClInclude Include="ParaEngine\SoundSource.h" />
+    <ClInclude Include="ParaEngine\Sprite.h" />
+    <ClInclude Include="ParaEngine\stb_image.h" />
+    <ClInclude Include="ParaEngine\stb_image_write.h" />
+    <ClInclude Include="ParaEngine\stb_rect_pack.h" />
+    <ClInclude Include="ParaEngine\stb_textedit.h" />
+    <ClInclude Include="ParaEngine\stb_truetype.h" />
+    <ClInclude Include="ParaEngine\Text.h" />
+    <ClInclude Include="ParaEngine\Texture.h" />
+    <ClInclude Include="ParaEngine\TextureLoader.h" />
+    <ClInclude Include="ParaEngine\Transform.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
